--- a/public/files/perm/themes/base/nova/style.css
+++ b/public/files/perm/themes/base/nova/style.css
@@ -238,10 +238,6 @@ body.exe-export,
     min-height: 0;
 }
 
-.sr-av {
-    display: none;
-}
-
 .exe-content .package-title {
     color: #333333;
     font-size: 1.7rem;
